# odb-first

./: .gitignore  CMakeLists.txt  JsonObjUTP.js  ParamInputItem.qml  ParamSelectItem.qml  README.md  apai_db_adapter.cpp  apai_db_adapter.h  apni_db_adapter.cpp  apni_db_adapter.h  apni_dbus_client.cpp  apni_dbus_client.h  apni_guiadapter.cpp  apni_guiadapter.h  database.hxx  database_create.h  documenthandler.cpp  documenthandler.h  esidatabase.cpp  esidatabase.h  main.cpp  main.qml  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.h  qml.qrc
cmake/Modules/: UseODB.cmake
models/: apai-datas.220121.xlsm  apai_db.h  apai_db.xml  apni_db.h  apni_db.xml
qtcsv/: abstractdata.h  contentiterator.cpp  contentiterator.h  filechecker.h  reader.cpp  reader.h  stringdata.cpp  stringdata.h  symbols.h  variantdata.cpp  variantdata.h  writer.cpp  writer.h
